[gd_scene load_steps=4 format=3 uid="uid://fa8kbn7t2exb"]

[ext_resource type="Script" uid="uid://d2i3gjmx5dc4d" path="res://addons/godot_core_system/examples/save_demo/save_demo.gd" id="1_ysvbt"]
[ext_resource type="Script" uid="uid://tp7fgwa0ysst" path="res://addons/godot_core_system/examples/save_demo/player.gd" id="2_masrl"]
[ext_resource type="Script" uid="uid://blo7p7y0s6611" path="res://addons/godot_core_system/source/serialization/save_system/serializable_component.gd" id="3_5wtt6"]

[node name="SaveDemo" type="Node2D"]
script = ExtResource("1_ysvbt")

[node name="Player" type="Node" parent="."]
script = ExtResource("2_masrl")

[node name="SerializableComponent" type="Node" parent="Player"]
script = ExtResource("3_5wtt6")
metadata/_custom_type_script = "uid://bmogf1du5qa8r"

[node name="UI" type="CanvasLayer" parent="."]

[node name="MarginContainer2" type="MarginContainer" parent="UI"]
offset_right = 600.0
offset_bottom = 391.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer2"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="UI/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="UI/MarginContainer2/HBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer2/HBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MarginContainer2/HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "玩家数据"

[node name="MarginContainer" type="MarginContainer" parent="UI/MarginContainer2/HBoxContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer2/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MarginContainer2/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "玩家名"

[node name="LineEditName" type="LineEdit" parent="UI/MarginContainer2/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="UI/MarginContainer2/HBoxContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer2/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MarginContainer2/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
text = "玩家等级"

[node name="LineEditLevel" type="LineEdit" parent="UI/MarginContainer2/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer3" type="MarginContainer" parent="UI/MarginContainer2/HBoxContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer2/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MarginContainer2/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2
text = "玩家经验"

[node name="LineEditExp" type="LineEdit" parent="UI/MarginContainer2/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="UI/MarginContainer2/HBoxContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="UI/MarginContainer2/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer2/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="UI/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1

[node name="SaveList" type="ItemList" parent="UI/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Buttons" type="HBoxContainer" parent="UI/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="Label" type="Label" parent="UI/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
text = "自动存档：？"

[node name="CreateButton" type="Button" parent="UI/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
text = "创建存档"

[node name="LoadButton" type="Button" parent="UI/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
text = "加载存档"

[node name="DeleteButton" type="Button" parent="UI/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
text = "删除存档"

[connection signal="deserialized" from="Player/SerializableComponent" to="." method="_on_serializable_component_deserialized"]
[connection signal="serialized" from="Player/SerializableComponent" to="." method="_on_serializable_component_serialized"]
[connection signal="pressed" from="UI/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/Buttons/CreateButton" to="." method="_on_create_button_pressed"]
[connection signal="pressed" from="UI/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/Buttons/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="UI/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/Buttons/DeleteButton" to="." method="_on_delete_button_pressed"]
